# waiter

./: .hgtags  .travis.yml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  great-docs.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.in  setup.cfg  setup.py  sitemap.xml  tests.py  waiter.py
.github/workflows/: build.yml  release.yml
docs/: conf.py  examples.ipynb  examples.qmd  reference.md  reference.rst  requirements.in  requirements.txt
examples/: index.html
reference/: index.html
search/: search_index.json
tests/: test_all.py
waiter/: __init__.py  awaiter.py  base.py
