[project]
name = "waiter"
version = "1.5.1"
description = "Delayed iteration for polling and retries."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["wait", "retry", "poll", "delay", "sleep", "timeout", "incremental", "exponential", "backoff", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coady/waiter"
Documentation = "https://coady.github.io/waiter"
Changelog = "https://github.com/coady/waiter/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/waiter/issues"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.coverage.run]
source = ["waiter"]
branch = true

[dependency-groups]
dev = ["pytest-cov"]
docs = ["mkdocstrings[python]", "mkdocs-jupyter", "httpx"]
