[metadata]
name = waiter
version = attr: waiter.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Delayed iteration for polling and retries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/waiter
license = Apache Software License
keywords = wait, retry, poll, delay, sleep, timeout, incremental, exponential, backoff, async
project_urls =
    Documentation = https://coady.github.io/waiter
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = waiter
install_requires = multimethod>=1.0
python_requires = >=3.7

[options.package_data]
waiter = py.typed

[flake8]
max-line-length = 100
exclude = .venv
ignore = E203,F811

[coverage:run]
source = waiter
branch = True
